04_git/aws/01-upstream/04-aws-upstream/bootstrap/argocd/yaml/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress-02-aws-upstream
  namespace: default
spec:
  ingressClassName: external-nginx
  rules:
    - host: 02-aws-upstream-argocd.panwang.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argo-cd-argocd-server
                port:
                  number: 80
